--- a/P1/APP/templates/index.html
+++ b/P1/APP/templates/index.html
@@ -22,7 +22,7 @@
         color: white;
       }
     </style>
-    <title>Document</title>
+    <title>VeVo Store</title>
   </head>
   <body>
     <div
